--- a/VeltiumCharger/data/WebServer/comands.html
+++ b/VeltiumCharger/data/WebServer/comands.html
@@ -21,32 +21,14 @@
     <a href="comms">Comunicaciones</a>
     <a href="status">Status</a>
     <div class="topnav-right">
-        <a href="javascript:void(0);" onclick="mainApp.logout();">Cerrar sesion</a>
+      <a href="javascript:void(0);" onclick="cerrar(this);" id="19">Cerrar sesion</a>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
   </div>
-    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-auth.js"></script>
 </head>
 <body>
-  
-  <!--
-     <div class="container">
-    <div class="centro">
-        <span class="dht-labels">Orden de carga</span>
-        %BUTTONPLACEHOLDER%<br/>
-        <form action="/currcomand" accept-charset="UTF-8">
-          <td><span class="dht-labels">Corriente deseada</span></td>
-          <td><input style = "text-align:center;" name="curr_comand" placeholder="%COMAND% A" type="text"></input></td>
-          <input type="submit" id="guardacomand" value="Guardar" onclick = "guardacomand(this)" hidden="hidden">
-          </form><br />
-        <span class="dht-labels">Mecanismo de bloqueo</span>
-        <span>%CONLOCK%</span><br/>
-    </div>
-   </div>
-  -->
 
   <table class="center">
     <tr>
@@ -66,9 +48,17 @@
     </tr>
   </table>
   
-    <script src="fireBase.js"></script>
-    <script src="main.js"></script>
     <script>
+function cerrar(element){
+  var xhr = new XMLHttpRequest();
+
+  if(element.clicked){ xhr.open("GET", "/update?output="+element.id+"", true); }
+
+  else { xhr.open("GET", "/update?output="+element.id+"", true); }
+
+  xhr.send();
+  self.location.href = "/login";
+}
 
 function myFunction() {
   var x = document.getElementById("myTopnav");
