--- a/VeltiumCharger/data/WebServer/status.html
+++ b/VeltiumCharger/data/WebServer/status.html
@@ -21,14 +21,12 @@
     <a href="comms">Comunicaciones</a>
     <a href="status" class="active">Status</a>
     <div class="topnav-right">
-        <a href="javascript:void(0);" onclick="mainApp.logout();">Cerrar sesion</a>
+      <a href="javascript:void(0);" onclick="cerrar(this);" id="19">Cerrar sesion</a>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
   </div>
-    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-auth.js"></script>
 </head>
 <body>
     <table class="center">
@@ -74,9 +72,18 @@
       </tr>
     </table>
    
-    <script src="main.js"></script>
-    <script src="fireBase.js"></script>
     <script>
+
+function cerrar(element){
+  var xhr = new XMLHttpRequest();
+
+  if(element.clicked){ xhr.open("GET", "/update?output="+element.id+"", true); }
+
+  else { xhr.open("GET", "/update?output="+element.id+"", true); }
+
+  xhr.send();
+  self.location.href = "/login";
+}
 
 function myFunction() {
   var x = document.getElementById("myTopnav");
