Alertas password + Correción del botón seleccionado en auth mode

--- a/VeltiumCharger/data/WebServer/ajustes.html
+++ b/VeltiumCharger/data/WebServer/ajustes.html
@@ -55,7 +55,11 @@
     </div>
       <div class="container">
         <input class="boton" type="submit" value="Guardar" onclick = "guardapwd(this)">
-        </div>
+      </div>
+      <div class="container">
+        %P_ERROR%
+      </div>
+      
   </form>
 
 
