--- a/VeltiumCharger/data/WebServer/login.html
+++ b/VeltiumCharger/data/WebServer/login.html
@@ -54,7 +54,8 @@
                     <input type="user" name="userid" placeholder="login">
                     <input class="pwd" type="password" name="pwd" placeholder="password">
                     <input class="log_button" type="submit" onclick=errormesage(this) value="Log In">
-                  </form>    
+                    %ALERT%
+                  </form>   
                   </div>
             </div>
         </tr>
