--- a/VeltiumCharger/data/WebServer/parameters.html
+++ b/VeltiumCharger/data/WebServer/parameters.html
@@ -95,9 +95,9 @@ function cerrar(element){
   var btns = header.getElementsByClassName("btn");
   for (var i = 0; i < btns.length; i++) {
     btns[i].addEventListener("click", function() {
-    var current = document.getElementsByClassName("active");
-    current[0].className = current[0].className.replace("active", "");
-    this.className += " active";
+    var current = document.getElementsByClassName("active3");
+    current[0].className = current[0].className.replace("active3", "");
+    this.className += " active3";
     console. log(current);
     });
   }
