--- a/VeltiumCharger/data/WebServer/ajustes.html
+++ b/VeltiumCharger/data/WebServer/ajustes.html
@@ -65,16 +65,15 @@
 
 <script>
     
-function cerrar(element){
-    var xhr = new XMLHttpRequest();
-    if(element.clicked){ 
-        xhr.open("GET", "/update?output="+element.id+"", true); 
-    }
-    else { 
-        xhr.open("GET", "/update?output="+element.id+"", true); 
-    }
+    function cerrar(element){
+  var xhr = new XMLHttpRequest();
+
+  if(element.clicked){ xhr.open("GET", "/logout", true); }
+
+  else { xhr.open("GET", "/logout", true); }
+
   xhr.send();
-  self.location.href = "/";
+  setTimeout(function(){ window.open("/","_self"); }, 500);
 }
 
 </script>
